Add haproxy to the setup.

--- a/home.yaml
+++ b/home.yaml
@@ -9,4 +9,5 @@
   become: true
   roles:
   - { role: server-basic }
-  - { role: server-kube, when: "'kube' in roles", tags: ['kube'] }
+  - { role: server-haproxy, when: "'haproxy' in roles", tags: ['haproxy'] }
+  - { role: server-kube,    when: "'kube' in roles",    tags: ['kube'] }
