Add some more useful packages.

--- a/roles/server-basic/tasks/main.yaml
+++ b/roles/server-basic/tasks/main.yaml
@@ -33,6 +33,7 @@
   - pacman:
       name: "{{ packages_absent }}"
       state: absent
+  tags: packages
 - name: Basic | Install symlinks
   file:
     src: "{{ item.src }}"
