--- a/home.yaml
+++ b/home.yaml
@@ -9,6 +9,7 @@
   become: true
   roles:
   - { role: server-basic }
+  - { role: server-apache,  when: "'apache' in roles",  tags: ['apache'] }
   - { role: server-bird,    when: "'bird' in roles",    tags: ['bird'] }
   - { role: server-haproxy, when: "'haproxy' in roles", tags: ['haproxy'] }
   - { role: server-kube,    when: "'kube' in roles",    tags: ['kube'] }
