--- a/roles/server-bird/tasks/main.yaml
+++ b/roles/server-bird/tasks/main.yaml
@@ -1,4 +1,4 @@
 ---
 - include_tasks: interface.yaml
-  loop: "{{ interfaces | dict2items }}"
+  loop: "{{ interfaces | default({}) | dict2items }}"
 - include_tasks: bird.yaml
